add functional tests for categories

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
+        <env name="DATABSE_URL" value="mysql://root:@127.0.0.1:3306/nereusvideodb?serverVersion=mariadb-10.4.21" />
     </php>
 
     <testsuites>
